--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -10,7 +10,7 @@ body{
 
 a{
     text-decoration: none;
-    color: none
+    color: inherit
 }
 
 .container{
@@ -325,6 +325,11 @@ Show the link that contains should open and close the navbar (.icon) */
 /*Fast food items style starts here*/
 .meals{
     padding: 20px 40px 40px 40px
+}
+
+.price-figure{
+  font-weight: bolder;
+  font-size: larger
 }
 
 .flex-container {
