--- a/UI/assets/css/style.css
+++ b/UI/assets/css/style.css
@@ -68,6 +68,12 @@ hr{
     border: 1px solid #ccc
 }
 
+header{
+  top:0;
+  position:fixed;
+  width:100%
+}
+
 footer{
   background-color: #4139ac;
   bottom:0;
